# fastapi-playground

./: .gitignore  .pdm-python  .pdm.toml  Gemfile  README.md  main.py  pyproject.toml  save_openapi.py
app/: dependencies.py  exception_handlers.py  main.py
app/config/: lifespan.py
app/routers/: exceptions.py  items.py  queues.py  upload.py
docs/: openapi.json  overview.md
docs/examples/python/: asgi_app.py  wsgi_app.py
docs/examples/ruby/: app.rb  config.ru
minio/: values.yaml
redis/: values.yaml
scripts/: down.sh  save_openapi.py  up.sh  update.sh
scripts/openapi/: generate.sh  openapi_client_config.json  save.py
src/app/: main.py
src/app/config/: lifespan.py
src/app/routers/: notifications.py  upload.py
src/app/workers/: celery.py  celery_config.py
src/app/workers/tasks/: __init__.py
src/client/_generated/: openapi_client_README.md
src/client/_generated/.openapi-generator/: FILES
src/client/_generated/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
src/client/_generated/openapi_client/api/: __init__.py  default_api.py  upload_api.py
src/client/_generated/openapi_client/docs/: DefaultApi.md  HTTPValidationError.md  UploadApi.md  ValidationError.md  ValidationErrorLocInner.md
src/client/_generated/openapi_client/models/: __init__.py  http_validation_error.py  validation_error.py  validation_error_loc_inner.py
src/client/_generated/openapi_client/test/: test_default_api.py  test_http_validation_error.py  test_upload_api.py  test_validation_error.py  test_validation_error_loc_inner.py
tests/: conftest.py  queue.sh  test_lifespan.py  test_main.py  upload.sh  url-list.sh
