[tool.pdm]
[tool.pdm.scripts]
start = "uvicorn app.main:app --reload"
test = "pytest -vv"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.1.0",
    "pytest>=7.3.2",
    "httpx>=0.24.1",
]
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Yifan Wu", email = "tyivanwu@gmail.com"},
]
dependencies = [
    "fastapi>=0.97.0",
    "uvicorn>=0.20.0",
    "gunicorn>=20.1.0",
    "python-multipart>=0.0.6",
    "boto3>=1.28.53",
]
requires-python = ">=3.10"
license = {text = "MIT"}
